discussion/kv_engine/135240/135240_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-41209: Replace folly::CachelinePadded with cacheline_aligned

In the current release of folly (v2020.08.24.00) CachelinePadded has
been removed, replaced with cacheline_aligned. Replace our uses of
CachelinePadded with cacheline_aligned.

Change-Id: I06d7ed9d77b336a45777bb58eae5017cbead4979

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-08-28 15:48:51.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-28 16:15:36.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4065/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/topkeys.h:23:10: error: "folly/lang/Aligned.h" file not found [clang-diagnostic-error]
#include <folly/lang/Aligned.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic_unordered_map.h:102:10: error: "folly/lang/Aligned.h" file not found [clang-diagnostic-error]
#include <folly/lang/Aligned.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/stats.h:24:10: error: "folly/lang/Aligned.h" file not found [clang-diagnostic-error]
#include <folly/lang/Aligned.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4065/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/topkeys.h:23:10:
error: "folly/lang/Aligned.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4065/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29864/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\stats.h(24): fatal error C1083: Cannot open include file: "folly/lang/Aligned.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29864/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25886/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/atomic_unordered_map.h:102:10:
fatal error: "folly/lang/Aligned.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25886/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5379/ : FAILURE

Compile error at [2020-08-28T16:13:11.011Z] ../kv_engine/engines/ep/src/atomic_unordered_map.h:102:10:
fatal error: folly/lang/Aligned.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5379/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5480/ : FAILURE

Compile error at [2020-08-28T16:13:11.065Z] ../kv_engine/engines/ep/src/atomic_unordered_map.h:102:10:
fatal error: folly/lang/Aligned.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5480/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13196/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5285/ : FAILURE

Compile error at [2020-08-28T16:13:47.522Z] ../kv_engine/engines/ep/src/atomic_unordered_map.h:102:10:
fatal error: folly/lang/Aligned.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5285/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4398/ : FAILURE

Compile error at [2020-08-28T15:50:33.256Z] ../kv_engine/engines/ep/src/atomic_unordered_map.h:102:10:
fatal error: "folly/lang/Aligned.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4398/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2591/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
